fix modal spacing button

--- a/wp-content/themes/Avada/assets/css/isf/isf-media-screen.css
+++ b/wp-content/themes/Avada/assets/css/isf/isf-media-screen.css
@@ -276,6 +276,14 @@
   }
 }
 
+@media screen and (max-width: 991px) {
+  #isfModalTitle {
+    margin-bottom: 20px !important;
+  }
+  .modal-donation-btn {
+    margin-top: 30px !important;
+  }
+}
 @media screen and (min-width: 768px) and (max-width: 859px) {
   .readmore h5 {
     text-align: center;
